fixed dark mode toggle to top

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 .flex-container {
   display: flex;
@@ -344,9 +346,10 @@ body.dark-mode .small-logo {
   background-color: transparent; /* Light mode button background color */
   cursor: pointer;
   border: 1px solid;
-  position: fixed;
+  position: absolute;
   top: 10px;
   right: 10px;
+  margin-right: 30px;
   z-index: 9999;
 }
 
